
  * Peter Mann
    - Initial Slovak translation (sk.po).
  * Steinar H. Gunderson
    - If main-menu encounters an unknown debconf/priority, it is no longer
      interpreted as `critical', but as `medium'.
  * Denis Barbier
    - Fix a buffer overflow in menu_entry() when language contains an
      underscore and the package description was not translated into
      this language.

 -- Joey Hess <joeyh@debian.org>  Fri,  7 Nov 2003 22:56:09 -0500

main-menu (0.050) unstable; urgency=low

  * Kenshi Muto
    - Update Japanese translation (ja.po)

 -- Joey Hess <joeyh@debian.org>  Fri,  7 Nov 2003 21:56:09 -0500

main-menu (0.049) unstable; urgency=low

  * Bart Cornelis
    - update Dutch translation (nl.po)
  * André Luís Lopes
    - Update pt_BR (Brazilian Portuguese) translation.
      
 -- Joey Hess <joeyh@debian.org>  Fri,  7 Nov 2003 13:41:03 -0500

main-menu (0.048) unstable; urgency=low

  * Joey Hess
    - log an internal error if it cannot find the selected menu item
    - cleaned up the template text a bit
  * Safir Secerovic, Amila Akagic
    - Add Bosnian translation (bs.po)
  * Claus Hindsgaul
    - Update Danish translation (da.po).
  * André Luís Lopes
    - Improve pt_BR (Brazilian Portuguese) translation a bit.
  * Pierre Machard
    - Run debconf-updatepo
    - Update French translation.
  * Kęstutis Biliūnas
    - Update Lithuanian translation.
  * Alastair McKinstry
    - Fallback when we don't have translations for dialects; eg "de_CH" drops
      back to the "de" translation if "de_CH" is missing.
  * Miroslav Kure
    - Update Czech (cs.po) translation.
  * Tommi Vainikainen
    - Update Finnish (fi.po) translation.
  * Petter Reinholdtsen
    - Updated Norwegian Bokmål (nb.po).

 -- Joey Hess <joeyh@debian.org>  Thu, 30 Oct 2003 18:23:08 -0500 

main-menu (0.047) unstable; urgency=low

  * Kęstutis Biliūnas
    - Update Lithuanian translation (lt.po).
  * Matt Kraai
    - Do not default to a package that provides a virtual package that is